<resources>
    <string name="app_name">WaveBus</string>
    <string name="title_activity_maps">WaveBus</string>
    <string name="NoUI">Poke Bus</string>
    <string name="action_settings">Settings</string>


    <string name="about_page_info">WaveBus was made by ClearFaun.
                                    WaveBus is licensed by the MTA.</string>

    <string name="removed_fav_bus">Deleted favorite Buses</string>

    <!--
     Air Plane Mode
     -->

    <string name="air_plane_mode">Please disable Airplane Mode</string>

    <!--
         no connection
         -->


    <string name="no_connection">No Connection\nPush to try again</string>

    <!--
    Keys
    -->
    <string name="fav_bus_key">favorite_bus_key</string>


    <!--
      Map preferences
      -->

    <string name="radius_key">KEY1</string>
    <string name="refresh_time_key">KEY2</string>
    <string name="pokebus_key">KEY3</string>
    <string name="pokebus_key_marker">KEY41</string>
    <string name="about_page_key">KEY32</string>
    <string name="pref_key6">KEY6</string>
    <string name="bus_map_key">KEY4888</string>
    <string name="facebook_key">KEY001</string>
    <string name="remove_poke_bus_key">KEY033</string>
    <string name="license_key">KEY44</string>

    <string name="map_preferences">Map Settings</string>

    <string name="radius_preference">Set Radius</string>
    <string name="set_radius">Set the range of PokeBus</string>
    <string name="auto_refresh_time">Auto Refresh Time</string>
    <string name="set_bus_update_frequency">Change Refresh Rate</string>

    <!--
         WaveBus preferences
         -->
    <string name="enable_location">Enable my Location</string>
    <string name="remove_all_poke_bus">Delete favorite Bus Stops</string>
    <string name="poke_bus_settings">PokeBus Settings</string>
    <string name="current_poke_bus">Current Poke Bus:</string>
    <string name="place_pokebus_marker">Make a PokeBus with a marker</string>
    <string name="get_current_poke_bus">Current PokeBus : 301649</string>
    <string name="pokebus_placement_info">Place marker over desired stop</string>
    <string name="set_pokebus">Enter 5 digit busCode to set a PokeBus</string>


    <!--
         BUS MAPS
         -->

    <string name="select_bus_map_tittle"> Select your borough</string>
    <string name="map_preference">Select default Bus Map</string>
    <string name="bus_maps_key">KEY99</string>
    <string name="bus_maps">Bus Map</string>
    <string name="current_map">Current map :Brooklyn</string>


    <!--
        Get Permission Text view
        -->
    <string name="turn_permission_on">For Wave Bus to work, we need to access your location. Your location enables us to find which
        buses you need to know about. Please enable the location permission.</string>
    <string name="enable_permission">Enable Permission</string>


    <!--
         snackBar tips
         -->

    <string name="tap_for_search">Tap map to search</string>
    <string name="tap_search_icon">Tap the Search icon in the toolbar to search for a bus stop in via location</string>
    <string name="my_location_icon">The my location icon will always return you to your current location </string>
    <string name="tap_bus_distances">Tap bus distances to set your favorite bus stops</string>

    <!--
       SnackBars
       -->
    <string name="you_allready_have_permission">Location Enabled</string>
    <string name="turn_on_location_snackbar_request">Please enable Location in Settings</string>
    <!--
       Other
       -->


    <string name="other">Other</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="bus_map">Select your preferred Bus Map</string>
    <string name="about">About</string>
    <string name="license">License</string>

    <!--
             Alarm
             -->
    <string name="alarm">Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="alarm_info">Alarm will activate when bus is at a specific distance</string>
    <string name="distance_for_alarm">Set distance for alarm</string>

    <!--
            License
                 -->

    <string name="license_one_header">FloatingActionButton</string>
    <string name="license_two_header">Material Design Elements Of Android L</string>
    <string name="license_three_header">Subsampling Scale Image View</string>


    <!--
       SearchDialog
       -->

    <string name="search_by_location">Search by location</string>
    <string name="address">Enter New York City address</string>
    <string name="location_not_found">Address not found</string>


    <!--
            NOUI
            -->


    <string name="title_list_preference">title_list_preference</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>


    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="entries_list_preference">entries_list_preference</string>

    <string name="entryvalues_list_preference">entryvalues_list_preference</string>
    <string name="launch_preferences">launch_preferences</string>

    <string name="title_screen_preference">title_screen_preference</string>

    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>

    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>

    <string name="title_child_preference">title_child_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>


    <!--
     This is for pokebus setting popup
     -->
    <string name="set_fav_bus">Set a favorite Bus Stop</string>
    <string name="set_fav_bus_body">When you set a favorite Bus Stop the closest Favorite bus stop in range will be displayed automatically</string>
    <string name="set_pokebus_body_two">Setting a Pokebus enables the fastest way to know when a bus is approaching a specific stop.
    Set the stop and use the included black launcher. A Pokebus stop is blue. You can enable multiple Pokebuses. The bus stop that is
        closest to you will be chosen. You can remove your Pokebuses in the settings menu.</string>
    <string name="confirm">SET</string>
    <string name="dismiss">CANCEL</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="request_location_dialog_titlle">Request</string>
</resources>
