<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Map Settings">
        <menu>
            <item
                android:key="@string/radius_key"
                android:title="@string/radius_preference"
                android:id="@+id/register_to_vote"
                android:icon="@drawable/ic_panorama_fish_eye_black_24dp"
                android:entries="@array/radius_entries"
                android:dialogTitle="@string/set_radius"
                android:entryValues="@array/radius_entries_values"
               />

            <item
                android:title="@string/auto_refresh_time"
                android:id="@+id/nav_discussion"
                android:icon="@drawable/ic_schedule_black_24dp"

                android:key="@string/refresh_time_key"
                android:entries="@array/auto_refresh_entries"
                android:entryValues="@array/auto_refresh_entries_values"
                android:dialogTitle="@string/set_bus_update_frequency"
                />


            <item
                android:icon="@drawable/ic_map_black_24dp"
                android:key="@string/bus_maps_key"
                android:title="@string/map_preference"
                android:entries="@array/map_entries"
                android:entryValues="@array/map_entries_values"
                android:summary="@string/current_map"
                />

            <item

                android:title="@string/remove_all_poke_bus"
                android:key="@string/remove_poke_bus_key"
                android:id="@+id/set_my_adress"
                android:icon="@drawable/ic_delete_black_24dp"
                />

            <item

                android:title="@string/enable_location"
                android:id="@+id/enable_my_location"
                android:icon="@drawable/ic_my_location_white_48dp"
                />

        </menu>

    </item>





    <item android:title="@string/other">
        <menu>
            <item
                android:title="@string/follow_me_on_twitter"
                android:key="@string/facebook_key"
                />

            <item
                android:key="@string/about_page_key"
                android:title="@string/about"
                />
            <item
                android:key="@string/license_key"
                android:title="@string/license"
                />



        </menu>

    </item>


</menu>