<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/map_preferences">

        <ListPreference
            android:key="list_preference"
            android:title="@string/radius_preference"
            android:entries="@array/radius_entries"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/set_radius" />


        <ListPreference
            android:key="list_preference"
            android:title="@string/auto_refresh_time"
            android:entries="@array/time_entries_for_auto_refresh"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/set_bus_update_frequency" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/poke_bus_settings">


        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/set_pokebus"
            android:summary="@string/get_current_poke_bus"
            />



    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/alarm">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="@string/set_alarm"
            android:summary="@string/alarm_info" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->

        <ListPreference
            android:key="list_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/distance_for_alarm"
            android:entries="@array/distance_for_alarm"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/set_radius" />

    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/other">

        <PreferenceScreen
            android:title="@string/like_us_on_facebook"
            >

            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.facebook.com/ClearFaun?ref=bookmarks" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/about"
            >

        </PreferenceScreen>

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->

    </PreferenceCategory>


</PreferenceScreen>