<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:gravity="center"
                android:text="@string/license_one_header"
                android:id="@+id/licenseOneHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:id="@+id/textViewOne" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="3sp"
                android:background="@color/black"
                android:paddingRight="45dp"
                android:paddingLeft="45dp"
                android:id="@+id/seperatorOne" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp"
                android:gravity="center"
                android:text="@string/license_two_header"
                android:id="@+id/licenseTwoHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:id="@+id/textViewTwo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/black"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:id="@+id/seperatorTwo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:gravity="center"
                android:text="@string/license_three_header"
                android:id="@+id/licenseThreeHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:id="@+id/textViewThree" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>